--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+ *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -39,4 +39,11 @@ body{
 .book h2{
     margin-top: 1rem;
     font-size: 1rem;
+}
+
+.author {
+    color: #617d98;
+    font-size: 0.75rem;
+    margin-top: 0.5rem;
+    letter-spacing: 2px;
 }
