--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body{
     border-radius: 1rem;
     padding: 3rem;
     text-align: center;
+    position: relative;
 }
 
 .book img{
@@ -46,4 +47,14 @@ body{
     font-size: 0.75rem;
     margin-top: 0.5rem;
     letter-spacing: 2px;
+}
+
+.number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border-top-left-radius: 1rem;
+    background: #c35600;
 }
